# src/docs/swagger.yaml
@@ -62,6 +62,19 @@ definitions:
       page:
         description: Page is the pagination info
     type: object
+  tenant.tenantRequest:
+    properties:
+      businessName:
+        type: string
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - businessName
+    - email
+    - password
+    type: object
 host: multi-tenant-api.onrender.com
 info:
   contact:
@@ -228,6 +241,64 @@ paths:
       summary: getUserByID
       tags:
       - auth
+  /tenant:
+    get:
+      consumes:
+      - application/json
+      description: this endpoint gets all users under a tenant
+      parameters:
+      - description: Bearer <token>
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: page
+        in: query
+        name: page
+        type: string
+      - description: size
+        in: query
+        name: size
+        type: string
+      - description: sort_by
+        in: query
+        name: sort_by
+        type: string
+      - description: sort_direction_desc
+        in: query
+        name: sort_direction_desc
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: audit log fetched successfully
+          schema:
+            $ref: '#/definitions/model.GenericResponse'
+      summary: getAllUsersByTenantID
+      tags:
+      - tenant
+    post:
+      consumes:
+      - application/json
+      description: this endpoint create a new tenent
+      parameters:
+      - description: tenant request body
+        in: body
+        name: tenantRequest
+        required: true
+        schema:
+          $ref: '#/definitions/tenant.tenantRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: tenant created successfully
+          schema:
+            $ref: '#/definitions/model.GenericResponse'
+      summary: createTenant
+      tags:
+      - tenant
   /transaction:
     get:
       consumes:
